tests/ui/impl-trait/wf-check-hidden-type.stderr
error[E0491]: in type `&'b &'a ()`, reference has a longer lifetime than the data it references
  --> $DIR/wf-check-hidden-type.rs:13:22
   |
LL | fn boom<'a, 'b>() -> impl Extend<'a, 'b> {
   |                      ^^^^^^^^^^^^^^^^^^^
   |
note: the pointer is valid for the lifetime `'b` as defined here
  --> $DIR/wf-check-hidden-type.rs:13:13
   |
LL | fn boom<'a, 'b>() -> impl Extend<'a, 'b> {
   |             ^^
note: but the referenced data is only valid for the lifetime `'a` as defined here
  --> $DIR/wf-check-hidden-type.rs:13:9
   |
LL | fn boom<'a, 'b>() -> impl Extend<'a, 'b> {
   |         ^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0491`.
